Closed Bug 195314 Opened 23 years ago Closed 22 years ago

Forced install regardless of existing installation

Categories

(Core Graveyard :: Installer: GRE, defect, P1)

x86
Windows 2000
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: carosendahl, Assigned: ssu0262)

Details

(Keywords: topembed+, Whiteboard: [adt2] 002cGreInstall.bat)

Attachments

(2 files, 1 obsolete file)

1.22 KB, patch
samir_bugzilla
: review+
jag+mozilla
: superreview+
sspitzer
: approval1.4+
Details | Diff | Splinter Review
3.98 KB, patch
Details | Diff | Splinter Review
20030227 Trunk The standalone GRE installer doesn't detect that the GRE has already been installed and performs a forced install unnecesarily. I believe it was supposed to detect if it was already installed or not before continuing with installation of gre files, but maybe this behaviour has changed? The spec still indicates otherwise.
I hesitate to write a new bug since the following is related: - specifying a new directory during the gre installation will create the gre in the new location and overwrite the registry keys of the prior installation. - effectively 'lose' the previous installation. Expected behavior: - detection that a prior installation of the same version exists, perhaps a prompt to overwrite, and then reinstallation (if forced) into existing directory. - directory location chooser disabled upon detection of the current version already installed.
I then installed the mfcembed installer (with GRE), which proceeded to then overwrite the registry settings of the GRE back to the default location. All of these are one in the same bug.
Actually it is two bugs. Let's remove the hardwire for the force option first though. Note to self - second bug relates to directory location of installed GRE and inability to deviate from the already installed location in the absence of a /reg_path param to the GRE installer.
Severity: normal → major
Priority: -- → P1
Summary: GRE installer forcing install regardless of existing installation → Forced install regardless of existing installation
Whiteboard: 002cGreInstall.bat
Please fix before shipping RTM.
Severity: major → critical
Whiteboard: 002cGreInstall.bat → 002cGreInstall.bat nsbeta1 topembed
Keywords: nsbeta1, topembed
Whiteboard: 002cGreInstall.bat nsbeta1 topembed → 002cGreInstall.bat
this is referring to over-installing the same version of the GRE right, not over a different version of the GRE, right? Sounds like extra work, but not horrible, correct? Or will this cause an unnecssary download of the bits again to get the new GRE customer to run?
it should be a one line fix (flipping of a var), but I haven't fully gone over the possibilites of its effects. Yes, it would cause an extra unecessary download of GRE.
Status: NEW → ASSIGNED
Discussed in edt. Plussing.
Keywords: topembedtopembed+
adt: nsbeta1+/adt2
Keywords: nsbeta1nsbeta1+
Whiteboard: 002cGreInstall.bat → [adt2] 002cGreInstall.bat
Attached patch patch v1.0Splinter Review
Attachment #123722 - Flags: review?(sgehani)
Attachment #123722 - Flags: review?(sgehani) → review+
Attachment #123722 - Flags: superreview?(jaggernaut)
Attachment #123722 - Flags: superreview?(jaggernaut) → superreview+
Attachment #123722 - Flags: approval1.4?
Comment on attachment 123722 [details] [diff] [review] patch v1.0 a=sspitzer
Attachment #123722 - Flags: approval1.4? → approval1.4+
patch checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
reopening. found some regressions. additional patch coming up.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Attached patch patch v1.1 (obsolete) — Splinter Review
additional patch to patch v1.0
Attachment #123829 - Flags: review?(sgehani)
Comment on attachment 123829 [details] [diff] [review] patch v1.1 sr=jag
Attachment #123829 - Flags: superreview+
Comment on attachment 123829 [details] [diff] [review] patch v1.1 > void SetInstallFilesVar(LPSTR szProdDir) > { > char szProgramPath[MAX_BUF]; > >- wsprintf(szProgramPath, "%s%s", szProdDir, sgProduct.szProgramName); >+ wsprintf(szProgramPath, "%s\\%s", szProdDir, sgProduct.szProgramName); Please add a check to ensure szProdDir doesn't have a backslash before appending one. With that change r=sgehani.
Attachment #123829 - Flags: review?(sgehani) → review+
Attached patch patchSplinter Review
Attachment #123829 - Attachment is obsolete: true
addedum patch checked in.
Status: REOPENED → RESOLVED
Closed: 22 years ago22 years ago
Resolution: --- → FIXED
20030613 branch build. Verified. Note that if the gre installation corrupts, the user must perform an uninstall or delete the GRE directory before running the ns installer.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: