fixing bug 195314 - Forced install regardless of existing installation. r=sgehani, sr=jag a=sspitzer